--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>My first three.js app</title>
+		<title>Music Viz</title>
     <meta charset="utf-8">
     <meta name="author" content="Roshni Shah"/>
-	  <link rel="stylesheet" type="text/css" href="css/loader.css"/>
+	  <link rel="stylesheet" type="text/css" href="css/load.css"/>
 	</head>
 	<body>
     <div id="webgl">
@@ -16,8 +16,10 @@
       <button id="start-animate" class="start-button">start</button>
     </div> -->
 
-		<script src="https://threejs.org/build/three.js"></script>
+		<!-- <script src="https://threejs.org/build/three.js"></script> -->
+		<script src="libraries/three.js"></script>
     <script src="libraries/AudioHelper.js"></script>
+		<script src="libraries/perlin.js"></script>
 		<script src="sketch.js"></script>
     <!-- <script src="libraries/p5.js"></script>
     <script src="libraries/p5.sound.js"></script> -->
